@@ -48,9 +48,9 @@ copyright = u'2018 Computer Networks Laboratory'
 # built documents.
 #
 # The short X.Y version.
-version = '3.3.0'
+version = '3.X.X'
 # The full version, including alpha/beta/rc tags.
-release = '3.3.0'
+release = '3.X.X'
 
 # The language for content autogenerated by Sphinx. Refer to documentation
 # for a list of supported languages.
