@@ -81,7 +81,7 @@ diff --git a/doc/ns3_html_theme/get_version.sh b/doc/ns3_html_theme/get_version.
      echo "//  private urls"                                  >> $outf
      echo "var ns3_host = \"file://$PWD/\";"                  >  $outf
 -    echo "var ns3_version = \"$repo @ $version$dirty\";"     >> $outf
-+    echo "var ns3_version = \"ns-3.29 + OFSwitch13 3.3.0\";" >> $outf
++    echo "var ns3_version = \"ns-3.29 + OFSwitch13 3.X.X\";" >> $outf
      echo "var ns3_release = \"doc/\";"                       >> $outf
      echo "var ns3_local = \"build/\";"                       >> $outf
      echo "var ns3_doxy  = \"html/\";"                        >> $outf
