@@ -5,6 +5,14 @@ OFSwitch13 release notes
 This file contains OFSwitch13 release notes (most recent releases first).
 
 
+Release 3.X.X (XXX XX, XXXX)
+============================
+
+- This version is compatible with ofsoftswitch13 library release v3.X.x and
+  ns-3 versions 3.28 or later (including patches). There is no backward
+  compatibility with older ns-3 versions.
+
+
 Release 3.3.0 (Sep 29, 2018)
 ============================
 
